# Finance-Bill

./: .gitignore  CNAME  README.md  add_seo.py  analysis.html  comparison.html  config.js  extract_pdf.py  impact.html  index.html  knowledge_base.js  layout.js  package.json  pyproject.toml  rebuild_pages.py  requirements.txt  robots.txt  script.js  sitemap.xml  style.css  vercel.json
api/: ask.py  build_index.py  chat.js
layout/: footer.html  navbar.html
public/: layout.js
public/layout/: navbar.html
